# dsv4-cudnn-bench

./: .gitignore  README.md  RESULTS.md  RUNBOOK.md  env.sh  pyproject.toml
results/: blackwell_all.json  blackwell_all.txt  blackwell_indexer.json  blackwell_indexer_sqeqsk.json  blackwell_indexer_sqeqsk.txt  hopper_all.json  hopper_all.txt  hopper_sparse_attn.json
scripts/: bench_dsa_bprop.py  bench_indexer_fwd_tune.py  bench_tilelang_bwd_tune.py
src/dsv4_cudnn_bench/: __init__.py  _compat.py  bench.py  data.py  indexer.py  sparse_attention.py
