[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsv4-cudnn-bench"
version = "0.1.0"
description = "Benchmark cuDNN-FE vs Miles tilelang DSv4 sparse-attention and indexer kernels"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]
